--- a/04/index.html
+++ b/04/index.html
@@ -21,7 +21,12 @@
       <h2>About Me</h2>
       <p>I am a web developer passionate about HTML and CSS.</p>
     </section>
-    
+    <section>
+      <img src="https://images.pexels.com/photos/574071/pexels-photo-574071.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="">
+      <img src="https://images.pexels.com/photos/4974914/pexels-photo-4974914.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="">
+      <!-- <img src="https://images.pexels.com/photos/3861958/pexels-photo-3861958.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt=""> -->
+     <img src="https://images.pexels.com/photos/3184660/pexels-photo-3184660.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="">
+    </section>
     <section>
       <h2>Contact Information</h2>
       <p>Email: info@example.com</p>
@@ -29,7 +34,7 @@
     </section>
     <section>
       <h2>My Pet</h2>
-      <img src="pet.jpg" alt="My Pet">
+      <img src="https://images.pexels.com/photos/6318997/pexels-photo-6318997.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="My Pet">
     </section>
     <section>
       <h2>Contact Form</h2>
